Add transaction ID to the response of ledger API
